--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
-grailsVersion=6.0.0
-grailsGradlePluginVersion=6.0.0
+grailsVersion=6.1.0
+grailsGradlePluginVersion=6.1.0
 version=0.1
 org.gradle.caching=true
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.jvmArgs=-Dfile.encoding=UTF-8 -Xmx1024M
+org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1024M
